# freighthero-watchtower

./: .dockerignore  .env.railway.example  .gitignore  Dockerfile  Dockerfile.railway  README.md  docker-compose.yml  pyproject.toml  railway.toml  start.sh
.github/workflows/: ci.yml  terraform.yml
console/: Dockerfile.frontend  README.md  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  railway.toml  start-nginx.sh  tsconfig.app.json  vite.config.ts  vitest.config.ts
console/e2e/: app.spec.ts
console/src/: App.test.tsx  App.tsx  index.css
console/src/api/: client.test.ts  client.ts  hooks.ts  mockData.test.ts  mockData.ts
console/src/screens/: AgentDebugger.test.tsx  AgentDebugger.tsx  AgentViewer.test.tsx  AgentViewer.tsx  Dashboard.test.tsx  Dashboard.tsx  LoadDetail.test.tsx  LoadDetail.tsx  Login.tsx  MemoryExplorer.test.tsx  MemoryExplorer.tsx  Monitoring.test.tsx  Monitoring.tsx  NewLoad.tsx  Simulation.tsx  ToolCallExplorer.test.tsx  ToolCallExplorer.tsx  TraceExplorer.test.tsx  TraceExplorer.tsx  (+2 more)
docs/: RAILWAY_DEPLOY.md  architecture.md  background.md  eval-report.md  memory-architecture.md
docs/adrs/: memory-adrs.md
docs/artifacts/: README.md  customer-expectations.md  notion.md  rubric.md
docs/diagrams/: challenge-input.schema.json
docs/specs/: confirm_delivery.md  memory-eval-harness.md  on_route_to_delivery_eta_checkpoint.md  test-cases.json
docs/wiki/: tools.md
infra/terraform/: .gitignore  Makefile  README.md  locals.tf  main.tf  outputs.tf  variables.tf
infrastructure/: main.tf  otel-collector-config.yaml  prometheus.yml
scripts/: README.md  deploy-railway.sh  seed_database.py
src/: __init__.py  main.py
src/agent/: __init__.py  confirm_delivery.py  eta_checkpoint.py  llm.py  orchestrator.py  tools.py
src/application/: __init__.py
src/domain/: __init__.py
src/infrastructure/: __init__.py
src/interfaces/: __init__.py  app.py
tests/: conftest.py  eval_runner.py  test_agent.py  test_api.py  test_domain.py  test_enums.py  test_eval_cases.py  test_memory.py  test_services.py  test_tools.py
tests/unit/: test_main.py
(+94 files in other folders)
